...
                                                  letterSpacing: 0.0,
                                                ),
                                          ),
                                          Container(
                                            width: 200.0,
                                            child: TextFormField(
                                              key: ValueKey('TextField_487v'),
                                              controller:
                                                  _model.textController1,
                                              focusNode:
                                                  _model.textFieldFocusNode,
                                              onChanged: (_) =>
                                                  EasyDebounce.debounce(
...
                                                CrossAxisAlignment.stretch,
                                            children: [
                                              Container(
                                                width: 200.0,
                                                child: TextFormField(
                                                  key: ValueKey(
                                                      'TextField_Share_z1qg'),
                                                  controller: _model
                                                      .textFieldShareTextController,
                                                  focusNode: _model
                                                      .textFieldShareFocusNode,
                                                  onChanged: (_) =>
                                                      EasyDebounce.debounce(
...
                      ),
                      Builder(
                        builder: (context) => Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              32.0, 16.0, 32.0, 0.0),
                          child: FFButtonWidget(
                            key: ValueKey('Button_x9cy'),
                            onPressed: (_model.textController1.text == null ||
                                    _model.textController1.text == '')
                                ? null
                                : () async {
                                    var _shouldSetState = false;
                                    final firestoreBatch =
...
